--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,12 @@ wikipedia
 python_dotenv
 beautifulsoup4
 requests
-pypdf
 faiss-cpu
 sentence-transformers
 huggingface_hub
 
-# curso Udemy
-transformers
-einops
-accelerate # simplificar o treinamento e a implementação de modelo em diferentes tipos de hardwares
-bitsandbytes # LLMs acessíveis por meio de quantização
+# extração PDF toolkit.py
+llama-index
+pypdf
+qdrant-client
+streamlit
